Refactor advanced search.
